# Event-Camera

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: algorithm.md  datasets.md  event_defect_design.md  experiments.md  project_structure.md  real_data_download_attempts.md  references.md
docs/archive/: README_EVENT_DEFECT.md
downloads/: metal_nut.tar.xz
event_defect/: __init__.py  checkpoint.py  data.py  dataset.py  dataset_sources.py  downloads.py  labels.py  manifest.py  metrics.py  model.py  representation.py  training.py
legacy/fall_detection_steps/: README.md  Step_0_Convert_Dataset.py  Step_1_Train.py  Step_1_Train_Frozen.py  Step_1_train_low.py  Step_2_ModifyCheckpoint.py  Step_3_Resume.py  Step_4_Visualize.py  Step_5_predit.py  Step_6_Export.py  Step_7_Predict_video_onnx.py  step_5_predict_vedio_delay.py  step_5_vedio_final.py
mvtec-ad-metal-nut-mirror/: README.md
scripts/: README.md  binarize_event_manifest.py  build_event_manifest.py  demo_patchcore_detection.py  download_mvtec_metal_nut.py  evaluate_event_defect.py  list_dataset_sources.py  predict_event_defect.py  simulate_events_from_images.py  split_event_manifest.py  train_event_defect.py  train_event_defect_feature_ensemble.py  train_patchcore_event_defect.py
tests/: test_checkpoint_tools.py  test_dataset_sources.py  test_download_validation.py  test_event_defect_core.py  test_event_defect_improvements.py  test_event_defect_model.py  test_event_defect_training.py  test_manifest_tools.py  test_patchcore_script.py  test_train_script.py
(+1 files in other folders)
